smr-argo-app-new/dev/item-search-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: item-save-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dev-item-search-api.healthtrustpg.com
      secretName: dev-item-healthtrustpg-com-1
  rules:
    - host: dev-item-search-api.healthtrustpg.com
      http:
        paths:
          - backend:
              service:
                name: dev-item-search-api
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
